; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_skynet_context_newsession.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_skynet_context_newsession.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skynet_context_newsession(%struct.skynet_context* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.skynet_context*, align 8
  %4 = alloca i32, align 4
  store %struct.skynet_context* %0, %struct.skynet_context** %3, align 8
  %5 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %6 = getelementptr inbounds %struct.skynet_context, %struct.skynet_context* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %6, align 4
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp sle i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %13 = getelementptr inbounds %struct.skynet_context, %struct.skynet_context* %12, i32 0, i32 0
  store i32 1, i32* %13, align 4
  store i32 1, i32* %2, align 4
  br label %16

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %11
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
